--- a/public/style.css
+++ b/public/style.css
@@ -263,3 +263,8 @@ blockquote {
     color: black;
     font-weight: normal;
 }
+
+a[target="_blank"]::after {
+    content: " ↗";
+    font-size: 0.8em;
+}
